Update color of background and font

--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@
   font-family: "Poppins", sans-serif;
   scroll-behavior: smooth;
   color-scheme: dark;
+  background-color: #454545;
 }
 
 .hash-span {
@@ -20,25 +21,25 @@
 }
 
 .black-gradient {
-  background: #000000; /* fallback for old browsers */
+  background: #454545; /* fallback for old browsers */
   background: -webkit-linear-gradient(
     to right,
     #434343,
-    #000000
+    #454545
   ); /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(
     to right,
     #434343,
-    #000000
+    #454545
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
-.violet-gradient {
-  background: #804dee;
-  background: linear-gradient(-90deg, #804dee 0%, rgba(60, 51, 80, 0) 100%);
+.blue-gradient {
+  background: #5C9EAD;
+  background: linear-gradient(-90deg, #5C9EAD 0%, rgba(60, 51, 80, 0) 100%);
   background: -webkit-linear-gradient(
     -90deg,
-    #804dee 0%,
+    #5C9EAD 0%,
     rgba(60, 51, 80, 0) 100%
   );
 }
