--- a/src/index.css
+++ b/src/index.css
@@ -203,3 +203,7 @@
       -2.6em 0em 0 0em rgba(255, 255, 255, 0.7), -1.8em -1.8em 0 0em #ffffff;
   }
 }
+
+.timeline-bg {
+  background-color: transparent !important;
+}
