Update color shade of black-gradient

--- a/src/index.css
+++ b/src/index.css
@@ -21,16 +21,16 @@
 }
 
 .black-gradient {
-  background: #454545; /* fallback for old browsers */
+  background: #282928; /* fallback for old browsers */
   background: -webkit-linear-gradient(
     to right,
-    #434343,
-    #454545
+    #282928,
+    #1b1c1b
   ); /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(
     to right,
-    #434343,
-    #454545
+    #282928,
+    #1b1c1b
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
