Add typewriter function for text.. Add blinker animation

--- a/src/index.css
+++ b/src/index.css
@@ -207,3 +207,13 @@
 .timeline-bg {
   background-color: transparent !important;
 }
+
+#typewriter {
+  animation: blinker 1s linear infinite;
+}
+
+@keyframes blinker{
+  50%{
+    opacity: 0;
+  }
+}
