Change blue-gradient to seafoam-gradient

--- a/src/index.css
+++ b/src/index.css
@@ -34,12 +34,12 @@
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
-.blue-gradient {
-  background: #59A7C1;
-  background: linear-gradient(-90deg, #59A7C1 0%, rgba(60, 51, 80, 0) 100%);
+.seafoam-gradient {
+  background: #9FE2BF;
+  background: linear-gradient(-90deg, #9FE2BF 0%, rgba(60, 51, 80, 0) 100%);
   background: -webkit-linear-gradient(
     -90deg,
-    #59A7C1 0%,
+    #9FE2BF 0%,
     rgba(60, 51, 80, 0) 100%
   );
 }
